==Ongoing==
* Optimized AppleIIVideo
* Fixed ControlBus, so overdone cycles are notified
* Fixed JoystickMapper transformations
* Implemented Apple II shift key mod
* Added keyboard modifiers to the canvas interface
* Implemented Apple II CTRL+BACKSPACE and CTRL+COMMAND+BACKSPACE
* Added update() call on addDocument/removeDevice
* Fixed Apple II NTSC/PAL switching
* Fixed mouse tracking in capture mode
* Implemented JoystickMapper buttons and relative axes
* Implemented JoystickMapper
* Refactorized joystick interface
* Implemented Apple Game Controllers
* Implemented Mac OS X joystick support
* Implemented AppleIIVideo PAL/NTSC
* Implemented Apple II copy
* Fixed color carrier per scanline
* Implemented Apple II hires mode
* Implemented Apple II revision 1
* Optimized Apple1Terminal
* Implemented AppleIIFloatingBus
* Implemented Apple II lores mode
* Implemented Apple II text video mode
* Fixed printing in Mac OS X
* Fixed window resizing in Mac OS X
* Optimized MMU
* Added postNotification to OEComponent
* Implemented monitor White Only
* Implemented AppleIIKeyboard
* Added monitor safe area
* Fixed Monitor bezel on init
* Added OEComponent dispose() callback
* Fixed last frame error in audio player 
* Implemented AppleIIGamePort
* Updated Replica-1 ROM to KRUSADER 1.3
* Implemented generic MMU
* Refactorized OpenEmulator memory paradigm

==OpenEmulator 1.0.1 26/10/2011==
* Fixed audio recorder
* Fixed audio file dragging to canvases
* Added Apple-1 cassette interface noise rejection parameter
* Fixed timing problem
* Added Apple-1 underscore on backspace parameter
* Refactorized the ControlBus scheduler. Niceeee!

==OpenEmulator 1.0 19/10/2011==
* Added luminance gain
* Fixed removing a window when in fullscreen mode
* Fixed persistence when changing window size
* Fixed ControlBus cycle count
* Fixed brightness/contrast in OpenGLCanvas
* Refactorized shaders
* Implemented display persistence
* Fixed problem when resizing and no video is generated