@@ -300,7 +300,7 @@ void ControlBus::notify(OEComponent *sender, int notification, void *data)
                 component->notify(this, CONTROLBUS_TIMER_DID_FIRE, &cpuCycles);
             
             cycleCount += events.front().cycles;
-            blockOffset -= events.front().cycles * cpuClockMultiplier - cpuCycles;
+            blockOffset -= events.front().cycles * cpuClockMultiplier + cpuCycles;
             
             events.pop_front();
         } while (component);
