@@ -62,7 +62,7 @@
 				<string key="NSWindowClass">NSPanel</string>
 				<nil key="NSViewClass"/>
 				<nil key="NSUserInterfaceItemIdentifier"/>
-				<string key="NSWindowContentMinSize">{320, 384}</string>
+				<string key="NSWindowContentMinSize">{256, 384}</string>
 				<object class="NSView" key="NSWindowView" id="733244116">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
@@ -507,7 +507,7 @@
 					<reference key="NSNextKeyView" ref="994341984"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1440, 900}}</string>
-				<string key="NSMinSize">{320, 400}</string>
+				<string key="NSMinSize">{256, 400}</string>
 				<string key="NSMaxSize">{10000000000000, 10000000000000}</string>
 				<string key="NSFrameAutosaveName"/>
 				<bool key="NSWindowIsRestorable">YES</bool>
